force-app/main/default/objects/LLC_BI__Lockbox_Service__c/LLC_BI__Lockbox_Service__c.object-meta.xml
<CustomObject>
    <description>This object stores records for Lockbox Service treasury services, including which vendor the financial institution uses for their lockboxes.</description>
    <label>Lockbox Service</label>
    <nameField>
        <displayFormat>L-{000000000}</displayFormat>
        <label>Lockbox Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lockbox Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>