force-app/main/default/objects/LLC_BI__Lockbox_Service__c/fields/LLC_BI__Vendor_Selection__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Vendor_Selection__c</fullName>
    <label>Vendor Selection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regulus</fullName>
            </value>
            <value>
                <fullName>FIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>